; ModuleID = '/home/carl/AnghaBench/mpv/sub/extr_osd_libass.c_add_osd_ass_event_escaped.c'
source_filename = "/home/carl/AnghaBench/mpv/sub/extr_osd_libass.c_add_osd_ass_event_escaped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i8*)* @add_osd_ass_event_escaped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @add_osd_ass_event_escaped(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_3__, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = bitcast %struct.TYPE_3__* %7 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %9, i8 0, i64 8, i1 false)
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @mangle_ass(%struct.TYPE_3__* %7, i8* %10)
  %12 = load i32*, i32** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32* @add_osd_ass_event(i32* %12, i8* %13, i32 %15)
  store i32* %16, i32** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @talloc_free(i32 %18)
  %20 = load i32*, i32** %8, align 8
  ret i32* %20
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @mangle_ass(%struct.TYPE_3__*, i8*) #2

declare dso_local i32* @add_osd_ass_event(i32*, i8*, i32) #2

declare dso_local i32 @talloc_free(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
